src/test/openshift/Deployment_axel-krebs-dev_timefox-backend-polyglott-git.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/axel-krebs/timefox-backend-polyglott.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"timefox-backend-polyglott-git:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"timefox-backend-polyglott-git\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: timefox-backend-polyglott-git
    app.kubernetes.io/component: timefox-backend-polyglott-git
    app.kubernetes.io/instance: timefox-backend-polyglott-git
    app.kubernetes.io/name: timefox-backend-polyglott-git
    app.kubernetes.io/part-of: timefox-backend-polyglott-git-app
  name: timefox-backend-polyglott-git
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: timefox-backend-polyglott-git
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: timefox-backend-polyglott-git
        deploymentconfig: timefox-backend-polyglott-git
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/axel-krebs-dev/timefox-backend-polyglott-git@sha256:3a803881876dc125b668d8aac37be8eed9e86e693fa46eb543b314e36152d8a5
        imagePullPolicy: Always
        name: timefox-backend-polyglott-git
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
