src/test/openshift/NetworkPolicy_axel-krebs-dev_allow-from-olm-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/owner":"axel-krebs","toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-from-olm-namespaces","namespace":"axel-krebs-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"openshift.io/scc":"anyuid"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}'
  labels:
    toolchain.dev.openshift.com/owner: axel-krebs
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-from-olm-namespaces
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          openshift.io/scc: anyuid
  podSelector: {}
  policyTypes:
  - Ingress
